2006-02-08  Richard Levitte  <richard@levitte.org>

	* po/sv.po: Correct translations of changed messages, translate
	new messages.

	* commands.cc (ls_changed, CMD(list)): Add a new command, "list
	changed", to list changed files, always sorted in lexical order.

2006-02-05  Benoît Dejean  <benoit@placenet.org>

	* ui.cc (tick_write_count::write_ticks): Reverted lexical_cast,
	back to F().

2006-02-05  Benoît Dejean  <benoit@placenet.org>

	* ui.cc (tick_write_count::write_ticks): Fixed utf8 handling.
	boost::format + locale sucks, it ouputs "1\u+ffff24" for
	"%d" % 1024.

2006-02-02  Emile Snyder  <emile@alumni.reed.edu>

	* merge.cc (resolve_merge_conflicts): If the merge has non-content
	conflicts warn the user and abort before making them do content
	merges.  Move logging/warning of conflicts to methods in the
	roster_merge_result struct.

	* roster_merge.{cc,hh} (log_conflicts,
	warn_non_content_conflicts): New methods to do the busy work of
	logging or warning.

2006-02-02  Emile Snyder  <emile@alumni.reed.edu>

	* netsync.cc (run_netsync_protocol): Print a warning if either the
	include or the exclude branch pattern have a ' or a " character
	anywhere in them.  Hopefully will help users running in a Windows
	shell when they do: monotone sync myserver 'mybranch*' and nothing
	happens because the ' characters are passed in to monotone.
	
2005-01-30  Emile Snyder  <emile@alumni.reed.edu>

	* annotate.cc: (do_annotate) Add ticker for revisions processed to
	annotate command.
	
2006-01-29  Richard Levitte  <richard@levitte.org>

	* po/sv.po: Update a few translations, leave a number of fuzzy
	ones until we've decided how "workspace" should be translated.

2006-01-27  Matthew Gregan  <kinetik@orcon.net.nz>

	* *: Use the term 'workspace' consistently throughout monotone for
	the concept we previously described interchangably using the two
	terms 'working copy' and 'working directory'.  This change has