@@ -77,6 +77,10 @@ List files intentionally ignored due to the ignore_file hook.
 \fBlist missing \fI[<pathname...]\fP
 List files in revision's manifest, but not in workspace.
 .TP
+\fBlist changed \fI[<pathname...]\fP
+List files in workspace that have changed compared to the base
+revision.
+.TP
 \fBfdata\fP \fI<id>\fP
 Write file data packet to stdout.
 .TP
