@@ -763,3 +763,5 @@ m4_include(tests/t_revert_ignored.at)
 m4_include(tests/t_no_persist_phrase.at)
 m4_include(tests/t_check_db_format.at)
 m4_include(tests/t_rename_destdir.at)
+m4_include(tests/t_rename_destdir.at)
+m4_include(tests/t_ls_changed.at)
